package grpc

import (
	"context"
	"time"

	"github.com/sirupsen/logrus"
)

// HandlerManager defines the interface for the handler manager
type HandlerManager interface {
	GetStats() map[string]interface{}
}

// DBLBModuleService implements the ModuleService interface for DBLB
type DBLBModuleService struct {
	handlerManager HandlerManager
	logger         *logrus.Logger
	startTime      time.Time
}

// NewModuleService creates a new DBLB module service
func NewModuleService(handlerManager HandlerManager, logger *logrus.Logger) *DBLBModuleService {
	return &DBLBModuleService{
		handlerManager: handlerManager,
		logger:         logger,
		startTime:      time.Now(),
	}
}

// GetStatus returns the current status of the DBLB module
func (s *DBLBModuleService) GetStatus(ctx context.Context) (map[string]interface{}, error) {
	status := map[string]interface{}{
		"module_type": "DBLB",
		"status":      "healthy",
		"uptime":      time.Since(s.startTime).Seconds(),
		"timestamp":   time.Now().Unix(),
	}

	s.logger.Debug("GetStatus called")
	return status, nil
}

// Reload reloads the DBLB configuration
func (s *DBLBModuleService) Reload(ctx context.Context, graceful bool) error {
	s.logger.WithField("graceful", graceful).Info("Reload requested")

	// In a full implementation, this would reload configuration
	// For now, just log the request
	return nil
}

// Shutdown gracefully shuts down the DBLB module
func (s *DBLBModuleService) Shutdown(ctx context.Context, graceful bool) error {
	s.logger.WithField("graceful", graceful).Info("Shutdown requested")

	// In a full implementation, this would trigger graceful shutdown
	// For now, just log the request
	return nil
}

// GetMetrics returns current metrics for the DBLB module
func (s *DBLBModuleService) GetMetrics(ctx context.Context) (map[string]interface{}, error) {
	metrics := map[string]interface{}{
		"module_type": "DBLB",
		"uptime":      time.Since(s.startTime).Seconds(),
		"timestamp":   time.Now().Unix(),
	}

	// Add handler stats if available
	if s.handlerManager != nil {
		metrics["handlers"] = s.handlerManager.GetStats()
	}

	s.logger.Debug("GetMetrics called")
	return metrics, nil
}

// HealthCheck performs a health check on the DBLB module
func (s *DBLBModuleService) HealthCheck(ctx context.Context) (string, error) {
	s.logger.Debug("HealthCheck called")
	return "healthy", nil
}

// GetStats returns detailed statistics for the DBLB module
func (s *DBLBModuleService) GetStats(ctx context.Context) (map[string]interface{}, error) {
	stats := map[string]interface{}{
		"module_type": "DBLB",
		"uptime":      time.Since(s.startTime).Seconds(),
		"start_time":  s.startTime.Unix(),
		"timestamp":   time.Now().Unix(),
	}

	// Add handler stats if available
	if s.handlerManager != nil {
		stats["handlers"] = s.handlerManager.GetStats()
	}

	s.logger.Debug("GetStats called")
	return stats, nil
}
